--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>網路行銷購物網</title>
+<title>超棒網路行銷購物網</title>
 <style type="text/css">
 #main {
 	margin: auto;
