--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 #top {
 	height: 120px;
 	width: 1024px;
-	background-image: url(images/0401.jpg);
+	background: green;
 	font-family: "標楷體";
 	font-size: 52px;
 	line-height: 120px;
@@ -27,7 +27,7 @@
 #marquee {
 	height: 30px;
 	width: 1024px;
-	background-image: url(images/0402.jpg);
+	background:green;
 }
 #main #marquee marquee {
 	font-family: "標楷體";
@@ -38,7 +38,7 @@
 #content {
 	height: 540px;
 	width: 1024px;
-	background-image: url(images/0402.jpg);
+	background: green;
 }
 #footer {
 	height: 78px;
